# sushi_ordering_api

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
sushi_api/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
sushi_api/migrations/: 0001_initial.py  0002_alter_customer_options_alter_order_options_and_more.py  0003_alter_order_customer.py  0004_order_total_price.py  0005_alter_orderitem_order.py
sushi_ordering_api/: asgi.py  settings.py  urls.py  wsgi.py
