[project]
name = "sushi-ordering-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "django-phonenumber-field>=8.3.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-xml>=2.0.0",
    "djoser>=2.3.3",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "phonenumbers>=9.0.18",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
